# norvig_spell_checker

./: .dockerignore  .env  Cargo.toml  Dockerfile  k8s-deploy.yaml  readme.md
src/: command_line_corrections.rs  lib.rs  main.rs  spell_checker.rs
