[package]
name = "norvig_spell_checker"
version = "0.1.0"
authors = ["Grzegorz Siekaniec"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"regex" = ""
log = "0.4.8"
env_logger = "0.7.1"
clap = ""
ascii_table = "3.0.0"
libc = ""
crossbeam = ""
crossbeam-channel = ""
rayon = ""
threadpool = ""
num_cpus = ""

[lib]
name = "norvig_spell_checker"
# crate-type = ["dylib"]
